--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
     "moment": "^2.29.4",
