--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
@@ -22,15 +23,17 @@
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-mini-chart": "^0.1.3",
-    "react-redux": "^9.0.4",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.0",
-    "react-time-picker": "^6.6.0"
+    "react-time-picker": "^6.6.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/globalize": "^1.5.5",
     "@types/react": "^18.2.43",
     "@types/react-big-calendar": "^1.8.7",
     "@types/react-dom": "^18.2.17",
+    "@types/react-sparklines": "^1.7.5",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
