--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jitsi/react-sdk": "^1.4.0",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
+    "formik": "^2.4.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -26,12 +28,15 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.0",
     "react-time-picker": "^6.6.0",
-    "redux-persist": "^6.0.0"
+    "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/globalize": "^1.5.5",
     "@types/react": "^18.2.43",
     "@types/react-big-calendar": "^1.8.7",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.17",
     "@types/react-sparklines": "^1.7.5",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
